fix button size on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -173,6 +173,9 @@ a:hover { text-decoration-line: underline; }
 }
 
 .blue-button {
+    min-height: 100%;
+    min-width: 100%;
+    box-sizing: border-box;
     padding: 6px 12px;
     border: 1px solid #a1c9f1;
     color: #a1c9f1;
